fix(headless): Provider signup called while not pending
